<resources>
    <string name="app_name">Mamie Mone</string>
    <string name="title_recipe_detail">Recipe Detail</string>
    <string name="title_photos">Photos</string>
    <string name="ingredients">Ingredients</string>
    <string name="preparation">Preparation</string>
    <string name="type_de_plat">Type de plat</string>
    <string name="plat_principal">Plat principal</string>
    <string name="dessert">Dessert</string>
    <string name="entree">Entree</string>
    <string name="difficulte">Difficulté</string>
    <string name="appliquer">Appliquer</string>
    <string name="difficile">Difficile</string>
    <string name="moyen">Moyen</string>
    <string name="facile">Facile</string>
    <string name="tous">Tous</string>
    <string name="filtre">Filtre</string>
    <string name="appTitle">Mamie Mone</string>
    <string name="recipe_list_empty_aware_text">Aucune recette !</string>
    <string name="activity_recipe_list_title">Les Recettes de Mamie Mone</string>
</resources>
